--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@nestjs/platform-express": "^9.4.1",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "build": "^0.1.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "helmet": "^7.0.0",
     "mysql2": "^3.3.1",
     "passport": "^0.6.0",
